# Anvil

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  flake.nix  shell.nix
.github/workflows/: ci.yml  release.yml
benches/: proxy_chain.rs  ssh_config_latency.rs  throughput.rs
src/: algorithms.rs  allowed_signers.rs  auth.rs  cert_authority.rs  config.rs  diagnostic.rs  error.rs  hostkey.rs  keygen.rs  lib.rs  log.rs  relay.rs  retry.rs  session.rs  sshsig.rs
src/agent/: askpass.rs  client.rs  daemon.rs
src/proxy/: command.rs  jump.rs  mod.rs  stdio.rs  tokens.rs
src/ssh_config/: include.rs  lexer.rs  matcher.rs  mod.rs  parser.rs  resolver.rs
tests/: ssh_config_acceptance.rs  test_clone.rs  test_connection.rs  test_hashed_hosts.rs  test_hostkey_writes.rs  test_known_hosts_cert.rs  test_proxy_jump.rs
tests/ssh_config_matrix/: 01_basic_block.yaml  02_first_wins.yaml  03_negation.yaml  04_proxy_jump.yaml  05_proxy_command.yaml  06_connect_timeout.yaml  07_multi_identity.yaml  08_global_then_specific.yaml  09_specific_then_global.yaml  10_proxy_command_none.yaml  11_jump_chain.yaml
